src/objects/LogWriterEntry__c.object
<CustomObject>
    <fields>
        <fullName>GroupIdentifier__c</fullName>
        <formula>LogGroup__r.GroupIdentifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogGroup__c</fullName>
        <label>Log Group</label>
        <referenceTo>LogGroup__c</referenceTo>
        <relationshipLabel>Log Writer Entries</relationshipLabel>
        <relationshipName>LogWriterEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MessageGuid__c</fullName>
        <label>Message Guid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>Step__r.Position__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SequenceName__c</fullName>
        <formula>Step__r.Sequence__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stamp__c</fullName>
        <formula>LogGroup__r.Stamp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>Step__c</referenceTo>
        <relationshipLabel>Log Writer Entries</relationshipLabel>
        <relationshipName>Log_Writer_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Log Writer Entry</label>
    <nameField>
        <displayFormat>LWE-{0000000000}</displayFormat>
        <label>Log Writer Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Writer Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>